--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "@ionic-native/splash-screen": "4.3.0",
         "@ionic-native/status-bar": "^4.3.0",
         "@ionic/storage": "2.0.1",
+        "@ngx-translate/core": "^8.0.0",
+        "@ngx-translate/http-loader": "^2.0.0",
         "cordova-android": "6.3.0",
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-inappbrowser": "^1.7.1",
@@ -32,7 +34,6 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
-        "ionic": "3.13.0",
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -42,6 +43,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.0.0",
+        "ionic": "3.13.1",
         "typescript": "2.3.4"
     },
     "description": "An Ionic project",
