--- a/package.json
+++ b/package.json
@@ -1,67 +1,72 @@
 {
-  "name": "digitstore",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.4.3",
-    "@angular/compiler": "4.4.3",
-    "@angular/compiler-cli": "4.4.3",
-    "@angular/core": "4.4.3",
-    "@angular/forms": "4.4.3",
-    "@angular/http": "4.4.3",
-    "@angular/platform-browser": "4.4.3",
-    "@angular/platform-browser-dynamic": "4.4.3",
-    "@ionic-native/core": "4.3.0",
-    "@ionic-native/in-app-browser": "^4.3.1",
-    "@ionic-native/keyboard": "^4.3.2",
-    "@ionic-native/splash-screen": "4.3.0",
-    "@ionic-native/status-bar": "^4.3.0",
-    "@ionic/storage": "2.0.1",
-    "@ngx-translate/core": "^8.0.0",
-    "@ngx-translate/http-loader": "^2.0.0",
-    "call-number": "^1.0.1",
-    "cordova-android": "^6.3.0",
-    "cordova-plugin-device": "^1.1.6",
-    "cordova-plugin-inappbrowser": "^1.7.1",
-    "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.2",
-    "ionic-angular": "3.6.1",
-    "ionic-plugin-keyboard": "^2.2.1",
-    "ionic2-auto-complete": "^1.5.3-beta",
-    "ionicons": "3.0.0",
-    "rxjs": "5.4.3",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.0.0",
-    "ionic": "3.15.1",
-    "typescript": "2.3.4"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-inappbrowser": {},
-      "ionic-plugin-keyboard": {},
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+    "name": "digitstore",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
     },
-    "platforms": [
-      "android"
-    ]
-  }
+    "dependencies": {
+        "@angular/common": "4.4.3",
+        "@angular/compiler": "4.4.3",
+        "@angular/compiler-cli": "4.4.3",
+        "@angular/core": "4.4.3",
+        "@angular/forms": "4.4.3",
+        "@angular/http": "4.4.3",
+        "@angular/platform-browser": "4.4.3",
+        "@angular/platform-browser-dynamic": "4.4.3",
+        "@ionic-native/barcode-scanner": "^4.3.3",
+        "@ionic-native/core": "4.3.0",
+        "@ionic-native/in-app-browser": "^4.3.1",
+        "@ionic-native/keyboard": "^4.3.2",
+        "@ionic-native/splash-screen": "4.3.0",
+        "@ionic-native/status-bar": "^4.3.0",
+        "@ionic/storage": "2.0.1",
+        "@ngx-translate/core": "^8.0.0",
+        "@ngx-translate/http-loader": "^2.0.0",
+        "call-number": "^1.0.1",
+        "cordova-android": "^6.3.0",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-inappbrowser": "^1.7.1",
+        "cordova-plugin-ionic-webview": "^1.1.16",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "ion2-calendar": "^2.0.11",
+        "ionic-angular": "3.6.1",
+        "ionic-plugin-keyboard": "^2.2.1",
+        "ionic2-auto-complete": "^1.5.3-beta",
+        "ionicons": "3.0.0",
+        "moment": "^2.19.1",
+        "phonegap-plugin-barcodescanner": "^7.0.0",
+        "rxjs": "5.4.3",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.18"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "3.0.0",
+        "ionic": "3.15.1",
+        "typescript": "2.3.4"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-inappbrowser": {},
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-webview": {},
+            "phonegap-plugin-barcodescanner": {}
+        },
+        "platforms": [
+            "android"
+        ]
+    }
 }
