--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
         "@angular/http": "4.4.3",
         "@angular/platform-browser": "4.4.3",
         "@angular/platform-browser-dynamic": "4.4.3",
-        "@ionic-native/barcode-scanner": "^4.3.3",
         "@ionic-native/core": "4.3.0",
         "@ionic-native/in-app-browser": "^4.3.1",
         "@ionic-native/keyboard": "^4.3.2",
+        "@ionic-native/qr-scanner": "^4.3.3",
         "@ionic-native/splash-screen": "4.3.0",
         "@ionic-native/status-bar": "^4.3.0",
         "@ionic/storage": "2.0.1",
@@ -31,9 +31,11 @@
         "@ngx-translate/http-loader": "^2.0.0",
         "call-number": "^1.0.1",
         "cordova-android": "^6.3.0",
+        "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-ionic-webview": "^1.1.16",
+        "cordova-plugin-qrscanner": "^2.5.0",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
@@ -43,7 +45,6 @@
         "ionic2-auto-complete": "^1.5.3-beta",
         "ionicons": "3.0.0",
         "moment": "^2.19.1",
-        "phonegap-plugin-barcodescanner": "^7.0.0",
         "rxjs": "5.4.3",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.18"
@@ -63,7 +64,7 @@
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-ionic-webview": {},
-            "phonegap-plugin-barcodescanner": {}
+            "cordova-plugin-qrscanner": {}
         },
         "platforms": [
             "android"
