--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "4.4.3",
         "@ionic-native/core": "4.3.0",
         "@ionic-native/file": "^4.3.3",
+        "@ionic-native/file-opener": "^4.3.3",
         "@ionic-native/file-transfer": "^4.3.3",
         "@ionic-native/in-app-browser": "^4.3.1",
         "@ionic-native/keyboard": "^4.3.2",
@@ -36,6 +37,7 @@
         "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-file": "^4.3.3",
+        "cordova-plugin-file-opener2": "^2.0.19",
         "cordova-plugin-file-transfer": "^1.6.3",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-ionic-webview": "^1.1.16",
@@ -70,7 +72,8 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-qrscanner": {},
             "cordova-plugin-file-transfer": {},
-            "cordova-plugin-file": {}
+            "cordova-plugin-file": {},
+            "cordova-plugin-file-opener2": {}
         },
         "platforms": [
             "android"
