--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
         "@ngx-translate/core": "^8.0.0",
         "@ngx-translate/http-loader": "^2.0.0",
         "call-number": "^1.0.1",
-        "cordova-android": "6.3.0",
+        "cordova-android": "^6.3.0",
         "cordova-plugin-compat": "^1.2.0",
-        "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-file-opener2": "^2.0.19",
         "cordova-plugin-file-transfer": "^1.6.3",
@@ -68,7 +67,6 @@
             "ionic-plugin-keyboard": {},
             "cordova-plugin-whitelist": {},
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-qrscanner": {},
