--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "4.4.3",
     "@ionic-native/app-minimize": "^4.4.2",
     "@ionic-native/core": "4.3.0",
+    "@ionic-native/device": "^4.5.2",
     "@ionic-native/file": "^4.3.3",
     "@ionic-native/file-opener": "^4.3.3",
     "@ionic-native/file-transfer": "^4.3.3",
@@ -35,7 +36,7 @@
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "call-number": "^1.0.1",
-    "cordova-android": "^6.4.0",
+    "cordova-android": "6.3.0",
     "cordova-plugin-appminimize": "^1.0.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-file": "^5.0.0",
@@ -56,7 +57,9 @@
     "onesignal-cordova-plugin": "^2.2.2",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-plugin-device": "~1.1.6",
+    "pushwoosh-cordova-plugin": "~7.0.8"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -77,7 +80,9 @@
       "cordova-plugin-file": {},
       "cordova-plugin-file-opener2": {},
       "onesignal-cordova-plugin": {},
-      "cordova-plugin-appminimize": {}
+      "cordova-plugin-appminimize": {},
+      "cordova-plugin-device": {},
+      "pushwoosh-cordova-plugin": {}
     },
     "platforms": [
       "android"
