--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "call-number": "^1.0.1",
-    "cordova-android": "^6.4.0",
+    "cordova-android": "6.3.0",
     "cordova-plugin-appminimize": "^1.0.0",
     "cordova-ios": "4.5.3",
     "cordova-plugin-compat": "^1.2.0",
