--- a/package.json
+++ b/package.json
@@ -20,46 +20,45 @@
     "@angular/http": "4.4.3",
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
-    "@ionic-native/app-minimize": "^4.4.2",
+    "@ionic-native/app-minimize": "^4.5.3",
     "@ionic-native/core": "4.3.0",
-    "@ionic-native/device": "^4.5.2",
-    "@ionic-native/file": "^4.3.3",
-    "@ionic-native/file-opener": "^4.3.3",
-    "@ionic-native/file-transfer": "^4.3.3",
-    "@ionic-native/in-app-browser": "^4.3.1",
-    "@ionic-native/keyboard": "^4.3.2",
-    "@ionic-native/onesignal": "^4.4.0",
-    "@ionic-native/qr-scanner": "^4.3.3",
+    "@ionic-native/device": "^4.5.3",
+    "@ionic-native/file": "^4.5.3",
+    "@ionic-native/file-opener": "^4.5.3",
+    "@ionic-native/file-transfer": "^4.5.3",
+    "@ionic-native/in-app-browser": "^4.5.3",
+    "@ionic-native/keyboard": "^4.5.3",
+    "@ionic-native/qr-scanner": "^4.5.3",
     "@ionic-native/splash-screen": "4.3.0",
-    "@ionic-native/status-bar": "^4.3.0",
+    "@ionic-native/status-bar": "^4.5.3",
     "@ionic/storage": "2.0.1",
     "@ngx-translate/core": "^8.0.0",
-    "@ngx-translate/http-loader": "^2.0.0",
+    "@ngx-translate/http-loader": "^2.0.1",
     "call-number": "^1.0.1",
     "cordova-android": "6.3.0",
     "cordova-plugin-appminimize": "^1.0.0",
     "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "~1.1.6",
+    "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-file-opener2": "^2.0.19",
-    "cordova-plugin-file-transfer": "^1.7.0",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-qrscanner": "^2.5.0",
     "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "^2.3.0",
+    "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
-    "ion2-calendar": "^2.0.11",
+    "ion2-calendar": "^2.1.5",
     "ionic-angular": "3.6.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionic2-auto-complete": "^1.5.3-beta",
     "ionicons": "3.0.0",
-    "moment": "^2.19.1",
-    "onesignal-cordova-plugin": "^2.2.2",
+    "moment": "^2.20.1",
+    "pushwoosh-cordova-plugin": "~7.0.8",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-plugin-device": "~1.1.6",
-    "pushwoosh-cordova-plugin": "~7.0.8"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -79,10 +78,13 @@
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-file": {},
       "cordova-plugin-file-opener2": {},
-      "onesignal-cordova-plugin": {},
       "cordova-plugin-appminimize": {},
       "cordova-plugin-device": {},
-      "pushwoosh-cordova-plugin": {}
+      "pushwoosh-cordova-plugin": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "1608396699197480",
+        "APP_NAME": "Digistore24"
+      }
     },
     "platforms": [
       "android"
