--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cordova-plugin-appminimize": "^1.0.0",
     "cordova-ios": "4.5.3",
     "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-file-opener2": "^2.0.19",
     "cordova-plugin-file-transfer": "^1.7.0",
@@ -64,7 +65,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
-    "ionic": "3.18.0",
+    "ionic": "3.19.1",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project",
@@ -82,7 +83,11 @@
       "onesignal-cordova-plugin": {},
       "cordova-plugin-appminimize": {},
       "cordova-plugin-device": {},
-      "pushwoosh-cordova-plugin": {}
+      "pushwoosh-cordova-plugin": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "1608396699197480",
+        "APP_NAME": "Digistore24"
+      }
     },
     "platforms": [
       "android",
