--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@ionic-native/qr-scanner": "^4.5.3",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "^4.5.3",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.1",
     "call-number": "^1.0.1",
@@ -49,6 +49,7 @@
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.3.0",
     "ion2-calendar": "^2.1.5",
     "ionic-angular": "3.6.1",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -84,7 +85,8 @@
       "cordova-plugin-facebook4": {
         "APP_ID": "1608396699197480",
         "APP_NAME": "Digistore24"
-      }
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
