--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
     "cordova-android": "6.3.0",
     "cordova-plugin-appminimize": "^1.0.0",
     "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-device": "~1.1.6",
-    "cordova-plugin-facebook4": "^1.9.1",
-    "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-facebook4": "^1.10.1",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-opener2": "^2.0.19",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-inappbrowser": "^1.7.2",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-qrscanner": "^2.5.0",
     "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.0",
     "ion2-calendar": "^2.1.5",
@@ -56,7 +56,7 @@
     "ionic2-auto-complete": "^1.5.3-beta",
     "ionicons": "3.0.0",
     "moment": "^2.20.1",
-    "pushwoosh-cordova-plugin": "~7.0.8",
+    "pushwoosh-cordova-plugin": "^7.0.8",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -81,7 +81,11 @@
       "cordova-plugin-file-opener2": {},
       "cordova-plugin-appminimize": {},
       "cordova-plugin-device": {},
-      "pushwoosh-cordova-plugin": {},
+      "pushwoosh-cordova-plugin": {
+        "LOG_LEVEL": "DEBUG",
+        "IOS_FOREGROUND_ALERT_TYPE": "NONE",
+        "ANDROID_FOREGROUND_PUSH": "false"
+      },
       "cordova-plugin-facebook4": {
         "APP_ID": "1608396699197480",
         "APP_NAME": "Digistore24"
